FlightPath 6.x Changelog
========================

2023-01-31
  Changed it so the "public files" screen only shows one icon for a link to a file.
  

2023-01-18
  Made a change to engagements module, when checking for all SMS messages.  Instead of checking for NOW - 1 DAY, it only checks
  for NOW - 3 HOURS.  For most of the time, this means it will only check for *today's* messages, except around midnight, where it will
  get the previous day's as well.  The aim is to retrieve less data, to lighten the amount of processing being done.
  
  Also made it so that we will not run the check for SMS messages (which simply refreshes delivery status, price, etc) more than
  once every 30 minutes.  This is also meant to lighten the amount of processing as well as how often we are contacting the signalwire API.
  

2023-01-11
  Added hook_...validate() functions to admin copy degree and admin duplicate year forms, so it won't mess up
  other modules.
  

2023-01-10
  Small tweak to system.js, so that the "large" dialog resizes better on a medium-sized tablets.


2022-12-19
  Fixed bug where dialogs were not closing after save (javascript had been disabled).


2022-12-10
  Fixed bug which was introduced in last version to the piechart engine, which made it stop working.
  
  Fixed bug in user module, which prevented manually creating staff users.
  

2022-11-12
  Edited pChart library to use new __construct() instead of class name for constructor functions.  This made it compatible with PHP 8.0.
  Also changed "var" keyword to "public" for variables, and set them to NULL instead of array(), especially since some of them
  are actually supposed to be objects.
    
  Made various other clean-up changes to make compatible with PHP 8.0.
  

2022-11-06
  Continued work to make compatible with PHP 8.0.
    

2022-11-05
  Cleaned up Administrator's Toolbox (courses) to make it cleaner.  Also fixed bug where it was not showing where
  a course was assigned.
  