@@ -210,6 +210,13 @@ function audit_get_approval_types($school_id = 0) {
     
   }
   
+  
+  // invoke hook to modify approval types, defined by other modules.
+  $params = array(&$rtn, $school_id);
+  invoke_hook('audit_modify_approval_types', $params);
+  
+  
+  
   return $rtn;
 }
 
@@ -425,6 +432,49 @@ function audit_display_audit() {
   } // foreach degreeplan->gpa_calculations
   
   
+  // invoke hook to check for more "overall" / calculations information for audit tab
+  $res = invoke_hook('audit_get_additional_overall_calculations', array($student, $school_id));
+  if (count($res) > 0) {
+    $pol = "";
+    $rtn .= "<tr class='audit-req audit-req-new-degree-title audit-row-$pol audit-req-degree-title-OVERALL'>
+                <td colspan='3'>" . t("Additional:") . "</td>
+             </tr>";
+    foreach ($res as $module_name => $thow_away) {
+      foreach ($res[$module_name] as $c => $calcs) {
+        
+        if ($pol != "even") {
+          $pol = "even";
+        }
+        else { 
+          $pol = "odd";
+        }        
+
+        $title = $calcs['title'];
+        $sec_1 = $calcs['section_1_html'];
+        $sec_2 = $calcs['section_2_html'];
+        
+        $rtn .= "    
+          <tr class='audit-req audit-req-additional-from-hook audit-row-$pol'>
+            <td width='25%'>$title</td>
+            <td class='audit-req-hours-percent'>$sec_1</td> 
+            <td class='audit-req-gpa'>$sec_2</td>              
+          </tr>";        
+                
+      }     
+    }
+   
+   
+    // Add a blank row at the end to make it easier to read.
+    $rtn .= "<tr class='audit-req audit-req-BLANK audit-row-$pol '>
+                    <td colspan='3'>&nbsp; &nbsp;</td>
+                 </tr>";
+    $pol = "";  // start over after a blank row    
+        
+  }
+  
+  
+  
+  
   
   $rtn .= "    
     <tr>
@@ -435,7 +485,7 @@ function audit_display_audit() {
       </td>
     </tr>
     ";
-  
+      
         
     $rtn .= "
     <tr>
@@ -447,7 +497,6 @@ function audit_display_audit() {
     // Get approval types from our setting
     $types = audit_get_approval_types($school_id);
     $options = audit_get_approval_options();
-    
     // Go through our types, displaying completed or not completed lines...
     foreach ($types as $approval_type => $approval_details) {
     
