@@ -1,6 +1,10 @@
 FlightPath 6.x Changelog
 ========================
 
+2023-02-09
+  Modified Audit module to have new hooks which allow the module developer to add to the audit screen custom calculations and approvals.
+
+
 2023-01-31
   Changed it so the "public files" screen only shows one icon for a link to a file.
   
